removed duplicated content in .ini files

--- a/FAOAgriculturalCensuesImporter/config/configuration-org-FAO.ini
+++ b/FAOAgriculturalCensuesImporter/config/configuration-org-FAO.ini
@@ -7,7 +7,7 @@ description_es = Alcanzar la seguridad alimentaria para todos y asegurar que las
 description_fr = Atteindre la sécurité alimentaire pour tous est au coeur des efforts de la FAO - veiller à ce que les êtres humains aient un accès régulier à une nourriture de bonne qualité qui leur permette de mener une vie saine et active. Nos trois principaux objectifs sont les suivants: contribuer à éradiquer la faim, l'insécurité alimentaire et la malnutrition; éliminer la pauvreté et favoriser le progrès social et économique pour tous; et gérer et utiliser de manière durable les ressources naturelles, y compris la terre, l’eau, l’air, le climat et les ressources génétiques, au profit des générations présentes et futures.
 chain_for_id = FAO
 
-[SOURCE]
+[DATASOURCE]
 name = FAO - Statistics Division
 datasource_id = 1
 
@@ -16,6 +16,3 @@ name = FAO Copyright
 description = Attribution and need permission for commercial use
 republish = true
 url = http://www.fao.org/contact-us/terms/en/
-
-[USER]
-login = FaostatImporter
