--- a/FAOAgriculturalCensuesImporter/config/configuration.ini
+++ b/FAOAgriculturalCensuesImporter/config/configuration.ini
@@ -198,10 +198,6 @@ samo_desc_en = Total area in holdings divided among the area operated under more
 samo_desc_es = Ninguna descripción disponible.
 samo_desc_fr = Aucune description.
 
-[DATASOURCE]
-name = FAO - Agricultural Censues
-datasource_id = 1
-
 [ORGANIZATION]
 name = FAO: Food and Agriculture Organization of the United Nations
 url = http://www.fao.org/
@@ -210,6 +206,10 @@ description_en = Achieving food security for all is at the heart of FAO's effort
 description_es = Alcanzar la seguridad alimentaria para todos y asegurar que las personas tengan acceso a alimentos de buena calidad que les permitan llevar una vida activa y saludable es la esencia de las actividades de la FAO. Nuestros tres objetivos principales son: la erradicación del hambre, la inseguridad alimentaria y la malnutrición, la eliminación de la pobreza y el impulso del progreso económico y social para todos, y la ordenación y utilización sostenibles de los recursos naturales, incluida la tierra, el agua, el aire, el clima y los recursos genéticos, en beneficio de las generaciones presentes y futuras.
 description_fr = Atteindre la sécurité alimentaire pour tous est au coeur des efforts de la FAO - veiller à ce que les êtres humains aient un accès régulier à une nourriture de bonne qualité qui leur permette de mener une vie saine et active. Nos trois principaux objectifs sont les suivants: contribuer à éradiquer la faim, l'insécurité alimentaire et la malnutrition; éliminer la pauvreté et favoriser le progrès social et économique pour tous; et gérer et utiliser de manière durable les ressources naturelles, y compris la terre, l’eau, l’air, le climat et les ressources génétiques, au profit des générations présentes et futures.
 chain_for_id = FAO
+
+[DATASOURCE]
+name = FAO - Statistics Division
+datasource_id = 1
 
 [LICENSE]
 name = FAO Copyright
