--- a/FAOAgriculturalCensuesImporter/config/configuration.ini
+++ b/FAOAgriculturalCensuesImporter/config/configuration.ini
@@ -1,5 +1,4 @@
 [TRANSLATOR]
-org_id = faoaci
 obs_int = 1589
 sli_int = 0
 dat_int = 1
@@ -17,7 +16,7 @@ data_range_cols_land_tenure 2000.xls = 0-20
 data_range_cols_land tenure_1970.1980.1990.xlsx = 0-11
 
 [INDICATOR]
-tnh_id = 1
+tnh_id = ACI-1
 tnh_topic = LAND_USE
 tnh_tendency = IRRELEVANT
 tnh_unit_name = Number of holdings
@@ -27,7 +26,7 @@ tnh_name_fr = nombre total d'exploitations
 tnh_desc_en = No description available.
 tnh_desc_es = Ninguna descripción disponible.
 tnh_desc_fr = Aucune description.
-tah_id = 2
+tah_id = ACI-2
 tah_topic = LAND_USE
 tah_tendency = IRRELEVANT
 tah_unit_name = Area of holdings
@@ -37,7 +36,7 @@ tah_name_fr = Superficie totale des exploitations
 tah_desc_en = No description available.
 tah_desc_es = Ninguna descripción disponible.
 tah_desc_fr = Aucune description.
-now_id = 3
+now_id = ACI-3
 now_topic = LAND_USE
 now_tendency = IRRELEVANT
 now_unit_name = Number of holdings
@@ -47,7 +46,7 @@ now_name_fr = Nombre d'exploitations gérées par des propriétaires
 now_desc_en = No description available.
 now_desc_es = Ninguna descripción disponible.
 now_desc_fr = Aucune description.
-nte_id = 4
+nte_id = ACI-4
 nte_topic = LAND_USE
 nte_tendency = IRRELEVANT
 nte_unit_name = Number of holdings
@@ -57,7 +56,7 @@ nte_name_fr = Nombre d'exploitations gérées par des métayers
 nte_desc_en = No description available.
 nte_desc_es = Ninguna descripción disponible.
 nte_desc_fr = Aucune description disponible.
-not_id = 5
+not_id = ACI-5
 not_topic = LAND_USE
 not_tendency = IRRELEVANT
 not_unit_name = Number of holdings
@@ -67,7 +66,7 @@ not_name_fr = Nombre d'exploitations gérées par autres
 not_desc_en = No description available.
 not_desc_es = Ninguna descripción disponible.
 not_desc_fr = Aucune description disponible.
-aow_id = 6
+aow_id = ACI-6
 aow_topic = LAND_USE
 aow_tendency = IRRELEVANT
 aow_unit_name = Area of holdings
@@ -77,7 +76,7 @@ aow_name_fr = Superficie gérée par des propriétaires
 aow_desc_en = No description available.
 aow_desc_es = Ninguna descripción disponible.
 aow_desc_fr = Aucune description.
-ate_id = 7
+ate_id = ACI-7
 ate_topic = LAND_USE
 ate_tendency = IRRELEVANT
 ate_unit_name = Area of holdings
@@ -87,7 +86,7 @@ ate_name_fr = Superficie gérée par des métayers
 ate_desc_en = No description available.
 ate_desc_es = Ninguna descripción disponible.
 ate_desc_fr = Aucune description.
-aot_id = 8
+aot_id = ACI-8
 aot_topic = LAND_USE
 aot_tendency = IRRELEVANT
 aot_unit_name = Area of holdings
@@ -97,7 +96,7 @@ aot_name_fr = Superficie gérée par autres
 aot_desc_en = No description available.
 aot_desc_es = Ninguna descripción disponible.
 aot_desc_fr = Aucune description.
-snow_id = 9
+snow_id = ACI-9
 snow_topic = LAND_USE
 snow_tendency = IRRELEVANT
 snow_unit_name = Percentage of total
@@ -107,7 +106,7 @@ snow_name_fr = Part d'exploitations gérées par des propriétaires
 snow_desc_en = Total number in holdings divided among the number operated as owner.
 snow_desc_es = Número total de proiedades dividido entre el número operado como propietario.
 snow_desc_fr = Nombre total d'exploitations divisé par le nombre d'exploitations gérées par des propriétaires.
-snte_id = 10
+snte_id = ACI-10
 snte_topic = LAND_USE
 snte_tendency = IRRELEVANT
 snte_unit_name = Percentage of total
@@ -117,7 +116,7 @@ snte_name_fr = Part d'exploitations gérées par des métayers
 snte_desc_en = Total number in holdings divided among the number operated as tenant.
 snte_desc_es = Número total de propiedades dividido entre el número operado como arrendatario.
 snte_desc_fr = Nombre total d'exploitations divisé par le nombre d'exploitations gérées par des métayers.
-snot_id = 11
+snot_id = ACI-11
 snot_topic = LAND_USE
 snot_tendency = IRRELEVANT
 snot_unit_name = Percentage of total
@@ -127,7 +126,7 @@ snot_name_fr = Part d'exploitations gérées par autres
 snot_desc_en = Total number in holdings divided among the number operated as others.
 snot_desc_es = Número total de propiedades dividido entre el número operado como otros.
 snot_desc_fr = Nombre total d'exploitations divisé par le nombre d'exploitations gérées par autres.
-saow_id = 12
+saow_id = ACI-12
 saow_topic = LAND_USE
 saow_tendency = IRRELEVANT
 saow_unit_name = Percentage of total
@@ -137,7 +136,7 @@ saow_name_fr = Part des superficies gérées par des propriétaires
 saow_desc_en = Total area in holdings divided among the area operated as owner.
 saow_desc_es = Área total de propiedades dividida entre el área operada como propietario.
 saow_desc_fr = Superficie totale divisée par superficie gérée par des propriétaires.
-sate_id = 13
+sate_id = ACI-13
 sate_topic = LAND_USE
 sate_tendency = IRRELEVANT
 sate_unit_name = Percentage of total
@@ -147,7 +146,7 @@ sate_name_fr = Part des superficies gérées par des métayers
 sate_desc_en = Total area in holdings divided among the area operated as tenant.
 sate_desc_es = Área total de propiedades dividida entre el área operada como arrendatario.
 sate_desc_fr = Superficie totale divisée par superficie gérée par des métayers.
-saot_id = 14
+saot_id = ACI-14
 saot_topic = LAND_USE
 saot_tendency = IRRELEVANT
 saot_unit_name = Percentage of total
@@ -157,7 +156,7 @@ saot_name_fr = Shares in area operated as others
 saot_desc_en = Total area in holdings divided among the area operated as others.
 saot_desc_es = Ninguna descripción disponible.
 saot_desc_fr = Aucune description.
-nmo_id = 15
+nmo_id = ACI-15
 nmo_topic = LAND_USE
 nmo_tendency = IRRELEVANT
 nmo_unit_name = Number of holdings
@@ -167,7 +166,7 @@ nmo_name_fr = Number operated under more than one form of tenure
 nmo_desc_en = No description found.
 nmo_desc_es = Ninguna descripción disponible.
 nmo_desc_fr = Aucune description.
-amo_id = 16
+amo_id = ACI-16
 amo_topic = LAND_USE
 amo_tendency = IRRELEVANT
 amo_unit_name = Area of holdings
@@ -177,7 +176,7 @@ amo_name_fr = Area operated under more than one form of tenure
 amo_desc_en = No description found.
 amo_desc_es = Ninguna descripción disponible.
 amo_desc_fr = Aucune description.
-snmo_id = 17
+snmo_id = ACI-17
 snmo_topic = LAND_USE
 snmo_tendency = IRRELEVANT
 snmo_unit_name = Percentage of total
@@ -187,7 +186,7 @@ snmo_name_fr = Shares in number operated under more than one form of tenure
 snmo_desc_en = Total number in holdings divided among the number operated under more than one form of tenure.
 snmo_desc_es = Ninguna descripción disponible.
 snmo_desc_fr = Aucune description.
-samo_id = 18
+samo_id = ACI-18
 samo_topic = LAND_USE
 samo_tendency = IRRELEVANT
 samo_unit_name = Percentage of total
@@ -197,23 +196,4 @@ samo_name_fr = Shares in area operated under more than one form of tenure
 samo_desc_en = Total area in holdings divided among the area operated under more than one form of tenure.
 samo_desc_es = Ninguna descripción disponible.
 samo_desc_fr = Aucune description.
-
-[ORGANIZATION]
-name = FAO: Food and Agriculture Organization of the United Nations
-url = http://www.fao.org/
-url_logo = http://www.fao.org/fileadmin/templates/faoweb/images/FAO-logo.png
-description_en = Achieving food security for all is at the heart of FAO's efforts – to make sure people have regular access to enough high-quality food to lead active, healthy lives. Our three main goals are: the eradication of hunger, food insecurity and malnutrition; the elimination of poverty and the driving forward of economic and social progress for all; and, the sustainable management and utilization of natural resources, including land, water, air, climate and genetic resources for the benefit of present and future generations.
-description_es = Alcanzar la seguridad alimentaria para todos y asegurar que las personas tengan acceso a alimentos de buena calidad que les permitan llevar una vida activa y saludable es la esencia de las actividades de la FAO. Nuestros tres objetivos principales son: la erradicación del hambre, la inseguridad alimentaria y la malnutrición, la eliminación de la pobreza y el impulso del progreso económico y social para todos, y la ordenación y utilización sostenibles de los recursos naturales, incluida la tierra, el agua, el aire, el clima y los recursos genéticos, en beneficio de las generaciones presentes y futuras.
-description_fr = Atteindre la sécurité alimentaire pour tous est au coeur des efforts de la FAO - veiller à ce que les êtres humains aient un accès régulier à une nourriture de bonne qualité qui leur permette de mener une vie saine et active. Nos trois principaux objectifs sont les suivants: contribuer à éradiquer la faim, l'insécurité alimentaire et la malnutrition; éliminer la pauvreté et favoriser le progrès social et économique pour tous; et gérer et utiliser de manière durable les ressources naturelles, y compris la terre, l’eau, l’air, le climat et les ressources génétiques, au profit des générations présentes et futures.
-chain_for_id = FAO
-
-[DATASOURCE]
-name = FAO - Statistics Division
-datasource_id = 1
-
-[LICENSE]
-name = FAO Copyright
-description = Attribution and need permission for commercial use
-republish = true
-url = http://www.fao.org/contact-us/terms/en/
 
