updated name of the dataset to LM-LANDMATRIX

--- a/LandMatrix_Importer/config/configuration.ini
+++ b/LandMatrix_Importer/config/configuration.ini
@@ -24,7 +24,8 @@ description_fr = Land Matrix est une initiative globale et indépendante de surv
 
 [DATASOURCE]
 name = Land Matrix
-id = 1
+id = LANDMATRIX
+
 
 [LICENSE]
 republish = True
