--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -17,9 +17,12 @@ sli_int = 0
 dat_int = 1
 igr_int = 0
 
+[DATASOURCE]
+name = FAO - Statistics Division
+datasource_id = FS
+
 [INDICATORS]
 codes = ["INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6"]
-
 
 [INDICATOR_1]
 id = 21018-6125
