updated name of the datasets from FAO-0 to FAO-LU

--- a/FAOSTAT_Importer/config/configuration.ini
+++ b/FAOSTAT_Importer/config/configuration.ini
@@ -17,6 +17,10 @@ sli_int = 0
 dat_int = 1
 igr_int = 0
 
+[SOURCE]
+name = FAO - Statistics Division
+datasource_id = LU
+
 [INDICATORS]
 codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR10"]
 
