--- a/FAOSTAT_Importer/config/configuration-land.ini
+++ b/FAOSTAT_Importer/config/configuration-land.ini
@@ -10,7 +10,7 @@ first_valid_year = 2013
 result_file_path = ./downloaded_data/info_indicators.txt
 
 [TRANSLATOR]
-indicator_names_valid_path = ./config/indicator_names.txt
+indicator_names_valid_path = ./config/indicator_names_land.txt
 historical_mode = True
 obs_int = 81856
 sli_int = 0
