updated WorldBank parser to query one time per indicator (not one time per indicator and country)

--- a/WorldBank_Importer/config/configuration-org-WB.ini
+++ b/WorldBank_Importer/config/configuration-org-WB.ini
@@ -1,7 +1,7 @@
 [URLs]
 ; to obtain the exact numbers of countries, check the total attribute in retrieved XML (nowadays, 264 countries)
 country_list = http://api.worldbank.org/v2/countries?per_page=500
-indicator_pattern = http://api.worldbank.org/v2/countries/{ISO3CODE}/indicators/{INDICATOR.CODE}?per_page=500
+indicator_pattern = http://api.worldbank.org/v2/countries/all/indicators/{INDICATOR.CODE}?per_page=30000
 base_api = http://api.worldbank.org/
 
 
