--- a/FAOSTAT_Importer/config/configuration-water.ini
+++ b/FAOSTAT_Importer/config/configuration-water.ini
@@ -1,5 +1,5 @@
 [FAOSTAT]
-zip_url = http://faostat3.fao.org/faostat-bulkdownloads/Environment_Water_E_All_Data.zip
+zip_url = http://fenixservices.fao.org/faostat/static/bulkdownloads/Environment_Water_E_All_Data.zip
 zip_file_path = ./downloaded_data/water.zip
 data_file_path = ./downloaded_data/water_extracted
 
