--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -1,5 +1,5 @@
 [FAOSTAT]
-zip_url = http://faostat3.fao.org/faostat-bulkdownloads/Food_Security_Data_E_All_Data_(Norm).zip
+zip_url = http://fenixservices.fao.org/faostat/static/bulkdownloads/Food_Security_Data_E_All_Data_(Norm).zip
 zip_file_path = ./downloaded_data/food-security.zip
 data_file_path = ./downloaded_data/food-security_extracted
 
