Added new indicators from FAOSTAT FAO Land dataset

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -22,7 +22,7 @@ name = FAO - Statistics Division
 datasource_id = LU
 
 [INDICATORS]
-codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR10"]
+codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR10","INDICATOR11","INDICATOR12","INDICATOR13","INDICATOR14","INDICATOR15","INDICATOR16","INDICATOR17","INDICATOR18","INDICATOR19","INDICATOR20","INDICATOR21","INDICATOR22","INDICATOR23","INDICATOR24","INDICATOR25","INDICATOR26","INDICATOR27","INDICATOR28","INDICATOR29","INDICATOR30","INDICATOR31","INDICATOR32","INDICATOR33","INDICATOR34","INDICATOR35","INDICATOR36"]
 
 [INDICATOR1]
 id = 6610-5110
@@ -175,4 +175,432 @@ desc_en = Agricultural area organic, total FIXME
 desc_es = Agricultural area organic, total FIXME
 desc_fr = Agricultural area organic, total FIXME
 fao_item_code = 6671
+fao_element_code = 5110
+
+
+[INDICATOR11]
+id = 6600-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Country area
+name_es = Country area
+name_fr = Country area
+desc_en = Country area
+desc_es = Country area
+desc_fr = Country area
+fao_item_code = 6600
+fao_element_code = 5110
+
+
+[INDICATOR12]
+id = 6611-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Agricultural area actually irrigated
+name_es = Agricultural area actually irrigated
+name_fr = Agricultural area actually irrigated
+desc_en = Agricultural area actually irrigated
+desc_es = Agricultural area actually irrigated
+desc_fr = Agricultural area actually irrigated
+fao_item_code = 6611
+fao_element_code = 5110
+
+[INDICATOR13]
+id = 6620-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Arable land and Permanent crops
+name_es = Arable land and Permanent crops
+name_fr = Arable land and Permanent crops
+desc_en = Arable land and Permanent crops
+desc_es = Arable land and Permanent crops
+desc_fr = Arable land and Permanent crops
+fao_item_code = 6620
+fao_element_code = 5110
+
+[INDICATOR14]
+id = 6630-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Temporary crops
+name_es = Temporary crops
+name_fr = Temporary crops
+desc_en = Temporary crops
+desc_es = Temporary crops
+desc_fr = Temporary crops
+fao_item_code = 6630
+fao_element_code = 5110
+
+[INDICATOR15]
+id = 6633-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Temporary meadows and pastures
+name_es = Temporary meadows and pastures
+name_fr = Temporary meadows and pastures
+desc_en = Temporary meadows and pastures
+desc_es = Temporary meadows and pastures
+desc_fr = Temporary meadows and pastures
+fao_item_code = 6633
+fao_element_code = 5110
+
+[INDICATOR16]
+id = 6640-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Fallow land (temporary)
+name_es = Fallow land (temporary)
+name_fr = Fallow land (temporary)
+desc_en = Fallow land (temporary)
+desc_es = Fallow land (temporary)
+desc_fr = Fallow land (temporary)
+fao_item_code = 6640
+fao_element_code = 5110
+
+[INDICATOR17]
+id = 6656-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Perm. meadows & pastures - Cultivated
+name_es = Perm. meadows & pastures - Cultivated
+name_fr = Perm. meadows & pastures - Cultivated
+desc_en = Perm. meadows & pastures - Cultivated
+desc_es = Perm. meadows & pastures - Cultivated
+desc_fr = Perm. meadows & pastures - Cultivated
+fao_item_code = 6656
+fao_element_code = 5110
+
+[INDICATOR18]
+id = 6659-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Perm. meadows & pastures - Nat. growing
+name_es = Perm. meadows & pastures - Nat. growing
+name_fr = Perm. meadows & pastures - Nat. growing
+desc_en = Perm. meadows & pastures - Nat. growing
+desc_es = Perm. meadows & pastures - Nat. growing
+desc_fr = Perm. meadows & pastures - Nat. growing
+fao_item_code = 6659
+fao_element_code = 5110
+
+[INDICATOR19]
+id = 6670-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Other land
+name_es = Other land
+name_fr = Other land
+desc_en = Other land
+desc_es = Other land
+desc_fr = Other land
+fao_item_code = 6670
+fao_element_code = 5110
+
+[INDICATOR20]
+id = 6672-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Agricultural area certified organic
+name_es = Agricultural area certified organic
+name_fr = Agricultural area certified organic
+desc_en = Agricultural area certified organic
+desc_es = Agricultural area certified organic
+desc_fr = Agricultural area certified organic
+fao_item_code = 6672
+fao_element_code = 5110
+
+[INDICATOR21]
+id = 6673-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Agricultural area in conversion to organic
+name_es = Agricultural area in conversion to organic
+name_fr = Agricultural area in conversion to organic
+desc_en = Agricultural area in conversion to organic
+desc_es = Agricultural area in conversion to organic
+desc_fr = Agricultural area in conversion to organic
+fao_item_code = 6673
+fao_element_code = 5110
+
+[INDICATOR22]
+id = 6674-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Arable land organic, total
+name_es = Arable land organic, total
+name_fr = Arable land organic, total
+desc_en = Arable land organic, total
+desc_es = Arable land organic, total
+desc_fr = Arable land organic, total
+fao_item_code = 6674
+fao_element_code = 5110
+
+
+[INDICATOR23]
+id = 6675-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Arable land area certified organic
+name_es = Arable land area certified organic
+name_fr = Arable land area certified organic
+desc_en = Arable land area certified organic
+desc_es = Arable land area certified organic
+desc_fr = Arable land area certified organic
+fao_item_code = 6675
+fao_element_code = 5110
+ 
+
+[INDICATOR24]
+id = 6676-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Arable land area in conversion to organic
+name_es = Arable land area in conversion to organic
+name_fr = Arable land area in conversion to organic
+desc_en = Arable land area in conversion to organic
+desc_es = Arable land area in conversion to organic
+desc_fr = Arable land area in conversion to organic
+fao_item_code = 6676
+fao_element_code = 5110
+
+
+[INDICATOR25]
+id = 6677-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Permanent crops organic, total
+name_es = Permanent crops organic, total
+name_fr = Permanent crops organic, total
+desc_en = Permanent crops organic, total
+desc_es = Permanent crops organic, total
+desc_fr = Permanent crops organic, total
+fao_item_code = 6677
+fao_element_code = 5110
+
+
+[INDICATOR26]
+id = 6678-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Permanent crops area certified organic
+name_es = Permanent crops area certified organic
+name_fr = Permanent crops area certified organic
+desc_en = Permanent crops area certified organic
+desc_es = Permanent crops area certified organic
+desc_fr = Permanent crops area certified organic
+fao_item_code = 6678
+fao_element_code = 5110
+
+
+[INDICATOR27]
+id = 6679-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Permanent crops area in conversion to organic
+name_es = Permanent crops area in conversion to organic
+name_fr = Permanent crops area in conversion to organic
+desc_en = Permanent crops area in conversion to organic
+desc_es = Permanent crops area in conversion to organic
+desc_fr = Permanent crops area in conversion to organic
+fao_item_code = 6679
+fao_element_code = 5110
+
+
+[INDICATOR28]
+id = 6680-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Inland water
+name_es = Inland water
+name_fr = Inland water
+desc_en = Inland water
+desc_es = Inland water
+desc_fr = Inland water
+fao_item_code = 6680
+fao_element_code = 5110
+
+
+[INDICATOR29]
+id = 6681-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Permanent meadows and pastures organic, total
+name_es = Permanent meadows and pastures organic, total
+name_fr = Permanent meadows and pastures organic, total
+desc_en = Permanent meadows and pastures organic, total
+desc_es = Permanent meadows and pastures organic, total
+desc_fr = Permanent meadows and pastures organic, total
+fao_item_code = 6681
+fao_element_code = 5110
+
+
+[INDICATOR30]
+id = 6682-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Permanent meadows and pastures area certified organic
+name_es = Permanent meadows and pastures area certified organic
+name_fr = Permanent meadows and pastures area certified organic
+desc_en = Permanent meadows and pastures area certified organic
+desc_es = Permanent meadows and pastures area certified organic
+desc_fr = Permanent meadows and pastures area certified organic
+fao_item_code = 6682
+fao_element_code = 5110
+
+
+[INDICATOR31]
+id = 6683-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Permanent meadows and pastures area in conversion to organic
+name_es = Permanent meadows and pastures area in conversion to organic
+name_fr = Permanent meadows and pastures area in conversion to organic
+desc_en = Permanent meadows and pastures area in conversion to organic
+desc_es = Permanent meadows and pastures area in conversion to organic
+desc_fr = Permanent meadows and pastures area in conversion to organic
+fao_item_code = 6683
+fao_element_code = 5110
+
+
+[INDICATOR32]
+id = 6690-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Total area equipped for irrigation
+name_es = Total area equipped for irrigation
+name_fr = Total area equipped for irrigation
+desc_en = Total area equipped for irrigation
+desc_es = Total area equipped for irrigation
+desc_fr = Total area equipped for irrigation
+fao_item_code = 6690
+fao_element_code = 5110
+
+[INDICATOR33]
+id = 6714-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Primary forest
+name_es = Primary forest
+name_fr = Primary forest
+desc_en = Primary forest
+desc_es = Primary forest
+desc_fr = Primary forest
+fao_item_code = 6714
+fao_element_code = 5110
+
+[INDICATOR34]
+id = 6716-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Planted forest
+name_es = Planted forest
+name_fr = Planted forest
+desc_en = Planted forest
+desc_es = Planted forest
+desc_fr = Planted forest
+fao_item_code = 6716
+fao_element_code = 5110
+
+[INDICATOR35]
+id = 6717-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Other naturally regenerated forest
+name_es = Other naturally regenerated forest
+name_fr = Other naturally regenerated forest
+desc_en = Other naturally regenerated forest
+desc_es = Other naturally regenerated forest
+desc_fr = Other naturally regenerated forest
+fao_item_code = 6717
+fao_element_code = 5110
+
+[INDICATOR36]
+id = 6774-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Area of arable land and permanent crops under protective cover
+name_es = Area of arable land and permanent crops under protective cover
+name_fr = Area of arable land and permanent crops under protective cover
+desc_en = Area of arable land and permanent crops under protective cover
+desc_es = Area of arable land and permanent crops under protective cover
+desc_fr = Area of arable land and permanent crops under protective cover
+fao_item_code = 6774
 fao_element_code = 5110
