Added new indicators for FAO Food Security dataset

--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -22,7 +22,7 @@ name = FAO - Statistics Division
 datasource_id = FS
 
 [INDICATORS]
-codes = ["INDICATOR_1", "INDICATOR_2", "INDICATOR_3", "INDICATOR_4", "INDICATOR_5", "INDICATOR_6"]
+codes = ["INDICATOR_1","INDICATOR_2","INDICATOR_3","INDICATOR_4","INDICATOR_5","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26","INDICATOR_27","INDICATOR_28","INDICATOR_29","INDICATOR_30","INDICATOR_31"]
 
 [INDICATOR_1]
 id = 21018-6125
@@ -115,3 +115,429 @@ desc_es = Access to improved sanitation facilities (%) FIXME
 desc_fr = Access to improved sanitation facilities (%) FIXME
 fao_item_code = 21020
 fao_element_code = 6121
+
+
+[INDICATOR_7]
+id = 6774-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Average dietary energy supply adequacy (%) (3-year average)
+name_es = Area of arable land and permanent crops under protective cover
+name_fr = Area of arable land and permanent crops under protective cover
+desc_en = Area of arable land and permanent crops under protective cover
+desc_es = Area of arable land and permanent crops under protective cover
+desc_fr = Area of arable land and permanent crops under protective cover
+fao_item_code = 6774
+fao_element_code = 5110
+
+
+[INDICATOR_8]
+id = 21010-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Average dietary energy supply adequacy (%) (3-year average)
+name_es = Average dietary energy supply adequacy (%) (3-year average)
+name_fr = Average dietary energy supply adequacy (%) (3-year average)
+desc_en = Average dietary energy supply adequacy (%) (3-year average)
+desc_es = Average dietary energy supply adequacy (%) (3-year average)
+desc_fr = Average dietary energy supply adequacy (%) (3-year average)
+fao_item_code = 21010
+fao_element_code = 6121
+
+
+[INDICATOR_9]
+id = 21011-6122
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Average value of food production (constant I$ per person) (3-year average)
+name_es = Average value of food production (constant I$ per person) (3-year average)
+name_fr = Average value of food production (constant I$ per person) (3-year average)
+desc_en = Average value of food production (constant I$ per person) (3-year average)
+desc_es = Average value of food production (constant I$ per person) (3-year average)
+desc_fr = Average value of food production (constant I$ per person) (3-year average)
+fao_item_code = 21011
+fao_element_code = 6122
+
+
+[INDICATOR_10]
+id = 21012-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
+name_es = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
+name_fr = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
+desc_en = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
+desc_es = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
+desc_fr = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
+fao_item_code = 21012
+fao_element_code = 6121
+
+
+[INDICATOR_11]
+id = 21013-6123
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Average protein supply (g/capita/day) (3-year average)
+name_es = Average protein supply (g/capita/day) (3-year average)
+name_fr = Average protein supply (g/capita/day) (3-year average)
+desc_en = Average protein supply (g/capita/day) (3-year average)
+desc_es = Average protein supply (g/capita/day) (3-year average)
+desc_fr = Average protein supply (g/capita/day) (3-year average)
+fao_item_code = 21013
+fao_element_code = 6123
+
+
+[INDICATOR_12]
+id = 21014-6123
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Average supply of protein of animal origin (g/capita/day) (3-year average)
+name_es = Average supply of protein of animal origin (g/capita/day) (3-year average)
+name_fr = Average supply of protein of animal origin (g/capita/day) (3-year average)
+desc_en = Average supply of protein of animal origin (g/capita/day) (3-year average)
+desc_es = Average supply of protein of animal origin (g/capita/day) (3-year average)
+desc_fr = Average supply of protein of animal origin (g/capita/day) (3-year average)
+fao_item_code = 21014
+fao_element_code = 6123
+
+
+[INDICATOR_13]
+id = 21015-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of paved roads over total roads (%)
+name_es = Percentage of paved roads over total roads (%)
+name_fr = Percentage of paved roads over total roads (%)
+desc_en = Percentage of paved roads over total roads (%)
+desc_es = Percentage of paved roads over total roads (%)
+desc_fr = Percentage of paved roads over total roads (%)
+fao_item_code = 21015
+fao_element_code = 6121
+
+
+[INDICATOR_14]
+id = 21017-6124
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Road density (per 100 square km of land area)
+name_es = Road density (per 100 square km of land area)
+name_fr = Road density (per 100 square km of land area)
+desc_en = Road density (per 100 square km of land area)
+desc_es = Road density (per 100 square km of land area)
+desc_fr = Road density (per 100 square km of land area)
+fao_item_code = 21017
+fao_element_code = 6124
+
+
+[INDICATOR_15]
+id = 21016-6124
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Rail-lines density (per 100 square km of land area)
+name_es = Rail-lines density (per 100 square km of land area)
+name_fr = Rail-lines density (per 100 square km of land area)
+desc_en = Rail-lines density (per 100 square km of land area)
+desc_es = Rail-lines density (per 100 square km of land area)
+desc_fr = Rail-lines density (per 100 square km of land area)
+fao_item_code = 21016
+fao_element_code = 6124
+
+
+[INDICATOR_16]
+id = 21001-6132
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Number of people undernourished (millions) (3-year average)
+name_es = Number of people undernourished (millions) (3-year average)
+name_fr = Number of people undernourished (millions) (3-year average)
+desc_en = Number of people undernourished (millions) (3-year average)
+desc_es = Number of people undernourished (millions) (3-year average)
+desc_fr = Number of people undernourished (millions) (3-year average)
+fao_item_code = 21001
+fao_element_code = 6132
+
+
+[INDICATOR_17]
+id = 21024-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of food inadequacy (%) (3-year average)
+name_es = Prevalence of food inadequacy (%) (3-year average)
+name_fr = Prevalence of food inadequacy (%) (3-year average)
+desc_en = Prevalence of food inadequacy (%) (3-year average)
+desc_es = Prevalence of food inadequacy (%) (3-year average)
+desc_fr = Prevalence of food inadequacy (%) (3-year average)
+fao_item_code = 21024
+fao_element_code = 6121
+
+
+[INDICATOR_18]
+id = 21035-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Cereal import dependency ratio (%) (3-year average)
+name_es = Cereal import dependency ratio (%) (3-year average)
+name_fr = Cereal import dependency ratio (%) (3-year average)
+desc_en = Cereal import dependency ratio (%) (3-year average)
+desc_es = Cereal import dependency ratio (%) (3-year average)
+desc_fr = Cereal import dependency ratio (%) (3-year average)
+fao_item_code = 21035
+fao_element_code = 6121
+
+
+[INDICATOR_19]
+id = 21034-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of arable land equipped for irrigation (%) (3-year average)
+name_es = Percentage of arable land equipped for irrigation (%) (3-year average)
+name_fr = Percentage of arable land equipped for irrigation (%) (3-year average)
+desc_en = Percentage of arable land equipped for irrigation (%) (3-year average)
+desc_es = Percentage of arable land equipped for irrigation (%) (3-year average)
+desc_fr = Percentage of arable land equipped for irrigation (%) (3-year average)
+fao_item_code = 21034
+fao_element_code = 6121
+
+
+[INDICATOR_20]
+id = 21033-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Value of food imports over total merchandise exports (%) (3-year average)
+name_es = Value of food imports over total merchandise exports (%) (3-year average)
+name_fr = Value of food imports over total merchandise exports (%) (3-year average)
+desc_en = Value of food imports over total merchandise exports (%) (3-year average)
+desc_es = Value of food imports over total merchandise exports (%) (3-year average)
+desc_fr = Value of food imports over total merchandise exports (%) (3-year average)
+fao_item_code = 21033
+fao_element_code = 6121
+
+
+[INDICATOR_21]
+id = 21029-6125
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Domestic food price volatility (index)
+name_es = Domestic food price volatility (index)
+name_fr = Domestic food price volatility (index)
+desc_en = Domestic food price volatility (index)
+desc_es = Domestic food price volatility (index)
+desc_fr = Domestic food price volatility (index)
+fao_item_code = 21029
+fao_element_code = 6125
+
+
+[INDICATOR_22]
+id = 21030-6127
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Per capita food production variability (I$ per person constant 2004-06)
+name_es = Per capita food production variability (I$ per person constant 2004-06)
+name_fr = Per capita food production variability (I$ per person constant 2004-06)
+desc_en = Per capita food production variability (I$ per person constant 2004-06)
+desc_es = Per capita food production variability (I$ per person constant 2004-06)
+desc_fr = Per capita food production variability (I$ per person constant 2004-06)
+fao_item_code = 21030
+fao_element_code = 6127
+
+
+[INDICATOR_23]
+id = 21031-6128
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Per capita food supply variability (kcal/capita/day)
+name_es = Per capita food supply variability (kcal/capita/day)
+name_fr = Per capita food supply variability (kcal/capita/day)
+desc_en = Per capita food supply variability (kcal/capita/day)
+desc_es = Per capita food supply variability (kcal/capita/day)
+desc_fr = Per capita food supply variability (kcal/capita/day)
+fao_item_code = 21031
+fao_element_code = 6128
+
+
+[INDICATOR_24]
+id = 21026-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of children under 5 years of age affected by wasting (%)
+name_es = Percentage of children under 5 years of age affected by wasting (%)
+name_fr = Percentage of children under 5 years of age affected by wasting (%)
+desc_en = Percentage of children under 5 years of age affected by wasting (%)
+desc_es = Percentage of children under 5 years of age affected by wasting (%)
+desc_fr = Percentage of children under 5 years of age affected by wasting (%)
+fao_item_code = 21026
+fao_element_code = 6121
+
+
+[INDICATOR_25]
+id = 21025-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of children under 5 years of age who are stunted (%)
+name_es = Percentage of children under 5 years of age who are stunted (%)
+name_fr = Percentage of children under 5 years of age who are stunted (%)
+desc_en = Percentage of children under 5 years of age who are stunted (%)
+desc_es = Percentage of children under 5 years of age who are stunted (%)
+desc_fr = Percentage of children under 5 years of age who are stunted (%)
+fao_item_code = 21025
+fao_element_code = 6121
+
+
+[INDICATOR_26]
+id = 21027-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of children under 5 years of age who are underweight (%)
+name_es = Percentage of children under 5 years of age who are underweight (%)
+name_fr = Percentage of children under 5 years of age who are underweight (%)
+desc_en = Percentage of children under 5 years of age who are underweight (%)
+desc_es = Percentage of children under 5 years of age who are underweight (%)
+desc_fr = Percentage of children under 5 years of age who are underweight (%)
+fao_item_code = 21027
+fao_element_code = 6121
+
+
+[INDICATOR_27]
+id = 21028-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of adults who are underweight (%)
+name_es = Percentage of adults who are underweight (%)
+name_fr = Percentage of adults who are underweight (%)
+desc_en = Percentage of adults who are underweight (%)
+desc_es = Percentage of adults who are underweight (%)
+desc_fr = Percentage of adults who are underweight (%)
+fao_item_code = 21028
+fao_element_code = 6121
+
+
+[INDICATOR_28]
+id = 21036-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of anaemia among children under 5 years of age (%)
+name_es = Prevalence of anaemia among children under 5 years of age (%)
+name_fr = Prevalence of anaemia among children under 5 years of age (%)
+desc_en = Prevalence of anaemia among children under 5 years of age (%)
+desc_es = Prevalence of anaemia among children under 5 years of age (%)
+desc_fr = Prevalence of anaemia among children under 5 years of age (%)
+fao_item_code = 21036
+fao_element_code = 6121
+
+
+[INDICATOR_29]
+id = 21039-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of anemia among pregnant women (%)
+name_es = Prevalence of anemia among pregnant women (%)
+name_fr = Prevalence of anemia among pregnant women (%)
+desc_en = Prevalence of anemia among pregnant women (%)
+desc_es = Prevalence of anemia among pregnant women (%)
+desc_fr = Prevalence of anemia among pregnant women (%)
+fao_item_code = 21039
+fao_element_code = 6121
+
+
+[INDICATOR_30]
+id = 21037-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of vitamin A deficiency in the population (%)
+name_es = Prevalence of vitamin A deficiency in the population (%)
+name_fr = Prevalence of vitamin A deficiency in the population (%)
+desc_en = Prevalence of vitamin A deficiency in the population (%)
+desc_es = Prevalence of vitamin A deficiency in the population (%)
+desc_fr = Prevalence of vitamin A deficiency in the population (%)
+fao_item_code = 21037
+fao_element_code = 6121
+
+
+[INDICATOR_31]
+id = 21038-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of iodine deficiency (%)
+name_es = Prevalence of iodine deficiency (%)
+name_fr = Prevalence of iodine deficiency (%)
+desc_en = Prevalence of iodine deficiency (%)
+desc_es = Prevalence of iodine deficiency (%)
+desc_fr = Prevalence of iodine deficiency (%)
+fao_item_code = 21038
+fao_element_code = 6121
+
