Added PV.EST indicator to the WB-WGI dataset

--- a/WorldBank_Importer/config/configuration-WB-WGI.ini
+++ b/WorldBank_Importer/config/configuration-WB-WGI.ini
@@ -15,6 +15,7 @@ World Bank - Worldwide Governance Indicators = WGI_indicators
 [WGI_indicators]
 Control of Corruption (Estimate) = CC.EST
 Rule of Law (Estimate) = RL.EST
+Political stability and absence of violence/terrorism (index) = PV.EST
 
 [CC.EST]
 indicator_id = CC.EST
@@ -36,6 +37,19 @@ indicator_tendency = INCREASE
 indicator_unit_name = %
 indicator_unit_type = %
 name_en = Rule of law
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+[PV.EST]
+indicator_id = PV.EST
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = %
+indicator_unit_type = %
+name_en = Political stability and absence of violence/terrorism (index)
 name_es = FIXME
 name_fr = FIXME
 desc_en = FIXME
