added Population living in slums (% of urban population) = EN.POP.SLUM.UR.ZS indicator from World Bank

--- a/WorldBank_Importer/config/configuration-WB-DEM.ini
+++ b/WorldBank_Importer/config/configuration-WB-DEM.ini
@@ -24,7 +24,7 @@ population ages 65 and above (percentage of total population) = SP.POP.65UP.TO.Z
 rural population (percentage of total population) = SP.RUR.TOTL.ZS
 urban population (percentage of total population) = SP.URB.TOTL.IN.ZS
 fertility rate, total (births per woman) = SP.DYN.TFRT.IN
-
+Population living in slums (% of urban population) = EN.POP.SLUM.UR.ZS
 
 [SP.DYN.LE00.FE.IN]
 indicator_id = SP.DYN.LE00.FE.IN
@@ -169,3 +169,16 @@ name_fr = Taux de fertilité, total (naissances par femme)
 desc_en = Total fertility rate represents the number of children that would be born to a woman if she were to live to the end of her childbearing years and bear children in accordance with current age-specific fertility rates.
 desc_es = La tasa de fertilidad total representa la cantidad de hijos que tendría una mujer si viviera hasta el final de sus años de fertilidad y tuviera hijos de acuerdo con las tasas de fertilidad actuales específicas por edad.
 desc_fr = Le taux de fertilité total représente le nombre d'enfants nés d'une femme si elle vivait jusqu'à la fin de sa période de fécondité et donnait naissance à des enfants conformément aux taux de fertilité actuels propres à chaque tranche d'âge.
+
+[EN.POP.SLUM.UR.ZS]
+indicator_id = EN.POP.SLUM.UR.ZS
+indicator_topic = GEOGRAPH_SOCIO
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = FIXME
+name_en = Population living in slums (% of urban population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_es = FIXME
+desc_fr = FIXME
